[TS-3404]: Handle race condition in handling delayed terminating chunk

Send EOS to the read_side if PluginVC's write_side is in shutdown state
and no bytes are needed to be transferred